--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ textarea:not([rows]) {
 
 body {
     background-color: hsl(47, 88%, 63%);
-    font-family: Figtree;
+    font-family: Figtree, sans-serif;
     font-size: 1rem;
     display: grid;
     place-items: center;
